[tool.poetry]
name = "griptape-labs"
version = "0.1.0"
description = "Experimental tools and extensions for Griptape."
authors = ["Griptape <hello@griptape.ai>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/griptape-ai/griptape-labs"

packages = [
    {include = "griptape"}
]

[tool.poetry.dependencies]
python = "^3.9"
griptape = "*"
google-api-python-client ="*"
google-auth-httplib2 = "*"
oauth2client = "*"
zoomus = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-mock = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
